Update and rename index.html.html to index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
-                    "Authorization": "Bearer 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"
+                    "Authorization": "Bearer {API_KEY}"
                 },
                 body: JSON.stringify({
                     model: "deepseek/deepseek-r1:free",
