--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
-                    "Authorization": "Bearer {API_KEY}"
+                    "Authorization": `Bearer ${API_KEY}`
                 },
                 body: JSON.stringify({
                     model: "deepseek/deepseek-r1:free",
